added range function in translations.h

--- a/src/clib/Makefile
+++ b/src/clib/Makefile
@@ -10,6 +10,13 @@ graph.o: graph.h node.h graph.c
 
 node.o: node.h node.c
 
+test: test.o translations.o
+
+translations.o: translations.c translations.h
+
+test.o: translations.h test.c
+
 .PHONY: clean
 clean:
-	rm -f *.o main
+	rm -f *.o main test
+
