--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-*.out
-*.aux
-*.toc
-*.log
-*.pdf
+documentation/*/*.out
+documentation/*/*.aux
+documentation/*/*.toc
+documentation/*/*.log
+documentation/*/*.pdf
