changed final report Makefile to refer to the correct file

--- a/documentation/final-report/Makefile
+++ b/documentation/final-report/Makefile
@@ -1,7 +1,7 @@
 pdf:
-	pdflatex lrm.tex
-	pdflatex lrm.tex
-	open lrm.pdf
+	pdflatex final_wip.tex
+	pdflatex final_wip.tex
+	open final_wip.pdf
 
 clean:
 	rm *.toc *.out *.log *.aux
